--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
-﻿<!DOCTYPE html>
-
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html lang="uk">
 <head>
-    <meta charset="utf-8" />
-    <title></title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>mkr1</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+  
 </head>
 <body>
+  <header>
+    <h1>mkr</h1>
+  </header>
 
 
-
-
-
-
-
+  <footer>
+    <p>© 2025. Усі права захищено.</p>
+  </footer>
 </body>
 </html>
