--- a/index.html
+++ b/index.html
@@ -3,18 +3,39 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>mkr1</title>
+  <title>Мій сайт</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-  
+  <style>
+    /* Додаткові стилі */
+    header { background-color: #0d6efd; color: white; padding: 20px; }
+    footer { background-color: #f8f9fa; padding: 15px; text-align: center; }
+  </style>
 </head>
 <body>
-  <header>
-    <h1>mkr</h1>
+  <header class="text-center">
+    <h1>Моя адаптивна сторінка</h1>
   </header>
 
+  <main class="container my-4">
+    <div class="row">
+      <div class="col-md-8">
+        <h2>Основний контент</h2>
+        <p>Тут може бути ваш текст, зображення або картки.</p>
+      </div>
+      <div class="col-md-4">
+        <h3>Бокова панель</h3>
+        <ul class="list-group">
+          <li class="list-group-item">Посилання 1</li>
+          <li class="list-group-item">Посилання 2</li>
+        </ul>
+      </div>
+    </div>
+  </main>
 
   <footer>
     <p>© 2025. Усі права захищено.</p>
   </footer>
 </body>
 </html>
+
+
