--- a/index.html
+++ b/index.html
@@ -1,29 +1,70 @@
-﻿<!DOCTYPE html>
-
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <!DOCTYPE html>
 <html lang="uk">
 <head>
-    <meta charset="utf-8" />
-    <title></title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>mkr1</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-  
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Конюшня "МКР 1"</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-  <header>
-    <h1>mkr</h1>
-  </header>
+<body class="page">
 
+    <div class="layout">
 
+        <nav class="menu">
+            <ul class="menu__list">
+                <li><a href="#" class="menu__link">Головна</a></li>
+                <li><a href="#" class="menu__link">Наші коні</a></li>
+                <li><a href="#" class="menu__link">Тренери</a></li>
+                <li><a href="#" class="menu__link">Контакти</a></li>
+            </ul>
+        </nav>
 
+        <main class="content">
+            <h2 class="content__title">Наші коні</h2>
+            <div class="content__cards">
+                <div class="card">
+                    <img src="images/horse1.jpg" alt="Кінь 1" class="card__img">
+                    <p>Блискавка</p>
+                </div>
+                <div class="card">
+                    <img src="images/horse2.jpg" alt="Кінь 2" class="card__img">
+                    <p>Грім</p>
+                </div>
+            </div>
+        </main>
 
+        <header class="header">
+            <div class="header__logo">🐎 Конюшня"МКР 1"</div>
+            <div class="header__search">
+                <input type="text" class="header__input" placeholder="Пошук...">
+                <button class="header__button">🔍</button>
+            </div>
+        </header>
 
+        <section class="services">
+            <h3>Наші послуги</h3>
+            <p>Прогулянки на конях, навчання верховій їзді, турніри.</p>
+        </section>
+
+        <aside class="aside">
+            <h3>Додаткова інформація</h3>
+            <ul>
+                <li>Графік роботи</li>
+                <li>Як дістатись</li>
+                <li>Поради</li>
+            </ul>
+        </aside>
+
+    </div>
+
+    <footer class="footer">
+        © 2025 Конюшня "МКР 1"
+    </footer>
 
 </body>
 </html>
+
+
 
 
 
