--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
             <h2 class="content__title">Наші коні</h2>
             <div class="content__cards">
                 <div class="card">
-                    <img src="images/horse1.jpg" alt="Кінь 1" class="card__img">
+                    <img src="horse1.jpg" alt="Кінь 1" class="card__img">
                     <p>Блискавка</p>
                 </div>
                 <div class="card">
-                    <img src="images/horse2.jpg" alt="Кінь 2" class="card__img">
+                    <img src="horse2.jpg" alt="Кінь 2" class="card__img">
                     <p>Грім</p>
                 </div>
             </div>
@@ -63,6 +63,7 @@
 
 </body>
 </html>
+
 
 
 
